// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`message component > should render error message 1`] = `
<DocumentFragment>
  <div
    class="toast-container position-absolute bottom-0 end-0 mb-3 me-3"
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      class="toast fade show showing"
      data-bs-autohide="false"
      data-oereb-message-confirm="false"
      data-oereb-message-id="a81dad33-08cf-4b50-b0c6-d14bcc427df8"
      initialized="true"
      role="alert"
    >
      <div
        class="toast-header"
      >
        <i
          class="bi bi-info-circle-fill text-primary me-2"
        />
        <strong
          class="me-auto"
        >
          message.info
        </strong>
        <button
          aria-label="Close"
          class="btn-close"
          type="button"
        />
      </div>
      <div
        class="toast-body"
      >
        foo
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      class="toast fade show showing"
      data-bs-autohide="false"
      data-oereb-message-confirm="false"
      data-oereb-message-id="a81dad33-08cf-4b50-b0c6-d14bcc427df8"
      initialized="true"
      role="alert"
    >
      <div
        class="toast-header"
      >
        <i
          class="bi bi-exclamation-triangle-fill text-warning me-2"
        />
        <strong
          class="me-auto"
        >
          message.warning
        </strong>
        <button
          aria-label="Close"
          class="btn-close"
          type="button"
        />
      </div>
      <div
        class="toast-body"
      >
        foo
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      class="toast fade show showing"
      data-bs-autohide="false"
      data-oereb-message-confirm="false"
      data-oereb-message-id="a81dad33-08cf-4b50-b0c6-d14bcc427df8"
      initialized="true"
      role="alert"
    >
      <div
        class="toast-header"
      >
        <i
          class="bi bi-x-octagon-fill text-danger me-2"
        />
        <strong
          class="me-auto"
        >
          message.error
        </strong>
        <button
          aria-label="Close"
          class="btn-close"
          type="button"
        />
      </div>
      <div
        class="toast-body"
      >
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`message component > should render info message 1`] = `
<DocumentFragment>
  <div
    class="toast-container position-absolute bottom-0 end-0 mb-3 me-3"
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      class="toast fade show showing"
      data-bs-autohide="false"
      data-oereb-message-confirm="false"
      data-oereb-message-id="a81dad33-08cf-4b50-b0c6-d14bcc427df8"
      initialized="true"
      role="alert"
    >
      <div
        class="toast-header"
      >
        <i
          class="bi bi-info-circle-fill text-primary me-2"
        />
        <strong
          class="me-auto"
        >
          message.info
        </strong>
        <button
          aria-label="Close"
          class="btn-close"
          type="button"
        />
      </div>
      <div
        class="toast-body"
      >
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`message component > should render message container 1`] = `
<DocumentFragment>
  <div
    class="toast-container position-absolute bottom-0 end-0 mb-3 me-3"
  />
</DocumentFragment>
`;

exports[`message component > should render warning message 1`] = `
<DocumentFragment>
  <div
    class="toast-container position-absolute bottom-0 end-0 mb-3 me-3"
  >
    <div
      aria-atomic="true"
      aria-live="assertive"
      class="toast fade show showing"
      data-bs-autohide="false"
      data-oereb-message-confirm="false"
      data-oereb-message-id="a81dad33-08cf-4b50-b0c6-d14bcc427df8"
      initialized="true"
      role="alert"
    >
      <div
        class="toast-header"
      >
        <i
          class="bi bi-info-circle-fill text-primary me-2"
        />
        <strong
          class="me-auto"
        >
          message.info
        </strong>
        <button
          aria-label="Close"
          class="btn-close"
          type="button"
        />
      </div>
      <div
        class="toast-body"
      >
        foo
      </div>
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      class="toast fade show showing"
      data-bs-autohide="false"
      data-oereb-message-confirm="false"
      data-oereb-message-id="a81dad33-08cf-4b50-b0c6-d14bcc427df8"
      initialized="true"
      role="alert"
    >
      <div
        class="toast-header"
      >
        <i
          class="bi bi-exclamation-triangle-fill text-warning me-2"
        />
        <strong
          class="me-auto"
        >
          message.warning
        </strong>
        <button
          aria-label="Close"
          class="btn-close"
          type="button"
        />
      </div>
      <div
        class="toast-body"
      >
        foo
      </div>
    </div>
  </div>
</DocumentFragment>
`;
